# dml-bench

./: .gitignore  DATA.md  LICENSE  Makefile  README.md  analyze_results.py  analyze_results_v2.py  create_figures.py  create_figures_v2.py  create_paper_figures.py  create_training_curves.py  environment.yml  pyproject.toml  requirements-lock.txt  requirements.txt  rerun_bugfix_all.sh  rerun_gradnorm.sh  run_architecture_ablation.py  run_extended_baselines.py  run_full_benchmark.py  run_gradnorm_fix_experiment.py  run_phase2_validation.py  run_smoke_test.py  run_tier1_then_tier2.sh  run_tier3.sh  run_tier4.sh  run_yieldcurve_experiments.py  theory_coupling_figures.py
EVIDENCE/: README.md  claims_registry.csv  numbers_source_map.csv
data/: README.md  fred_yields.csv
dml_benchmark/: README.md  __init__.py  baselines.py  config.py  era5_dataset.py  functions.py  fuzzy_smoothing.py  heston_2d_inputs.py  high_fidelity_references.py  io.py  loss_balancing.py  lrm_labels.py  lrm_labels_bs_barrier.py  metrics.py  model.py  stats.py  trainer.py  visualization.py
experiments/: README.md  analyze_new_experiments.py  gnn_md17.py  gradient_noise_sweep.py  higher_order_dml.py  learned_derivatives.py  plot_extensions.py  plot_noise_sweep.py
metadata/: README.md  croissant.json
results/: README.md  _README_classical_baselines_canonical_dir.md
scripts/: README.md  ablation_phase1_es.py  ablation_v1_p7_weights.py  ablation_warmup_lr.py  aggregate_spy_purged_cv.py  compute_win_rates.py  create_export_figures.py  darcy_sanity_check.py  download_era5.py  era5_go_nogo.py  (+36 more)
(+29723 files in other folders)
