[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dml-benchmark"
version = "0.2.0"
description = "Systematic benchmark for Derivative-enhanced Machine Learning (DML)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Anonymous"},
]
keywords = ["machine-learning", "derivatives", "benchmark", "neural-networks", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scipy>=1.11.0",
    "tqdm>=4.66.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "plotly>=5.18.0",
]

[tool.setuptools.packages.find]
include = ["dml_benchmark*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:multiprocessing",
    "ignore::RuntimeWarning:multiprocessing",
]
